# WhoisQuery

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: advanced_usage.py  basic_usage.py
src/whoisquery/: __init__.py  cli.py  core.py
src/whoisquery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_core.py
